mcrurl fix: parameter removing causes invalid url if containing special signs
git-svn-id: https://server.mycore.de/svn/mycore/trunk@28045 7089d063-bc14-496d-ac90-53de1872eb6c